--- a/package.json
+++ b/package.json
@@ -25,16 +25,15 @@
 		"url": "git+https://github.com/hugoalh-studio/setation-nodejs.git"
 	},
 	"dependencies": {
-		"@hugoalh/advanced-determine": "^10.2.1",
-		"@hugoalh/unique-array": "^2.0.1"
+		"@hugoalh/advanced-determine": "^10.3.0"
 	},
 	"devDependencies": {
 		"@types/node": "^18.15.11",
-		"@typescript-eslint/eslint-plugin": "^5.57.0",
-		"@typescript-eslint/parser": "^5.57.0",
+		"@typescript-eslint/eslint-plugin": "^5.57.1",
+		"@typescript-eslint/parser": "^5.57.1",
 		"eslint": "^8.37.0",
 		"eslint-plugin-only-warn": "^1.1.0",
-		"typescript": "^5.0.2"
+		"typescript": "^5.0.3"
 	},
 	"engines": {
 		"node": "^12.20.0 || ^14.15.0 || >=16.13.0"
