--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,40 +12,21 @@ updates:
       - "Platform/GitHubActions"
       - "Status/Pending 🔵"
       - "Type/Dependency 📦"
-    open-pull-requests-limit: 100
+    open-pull-requests-limit: 256
     pull-request-branch-name:
       separator: "/"
   - package-ecosystem: "npm"
-    directory: "/"
+    directory: "/npm"
     schedule:
       interval: "weekly"
       day: "sunday"
       time: "00:00"
       timezone: "Etc/UTC"
-    groups:
-      development:
-        patterns:
-          - "@*/eslint-config-*"
-          - "@*/eslint-config"
-          - "@*/eslint-formatter-*"
-          - "@*/eslint-formatter"
-          - "@*/eslint-parser-*"
-          - "@*/eslint-parser"
-          - "@*/eslint-plugin-*"
-          - "@*/eslint-plugin"
-          - "@types/*"
-          - "@typescript-eslint/*"
-          - "eslint-config-*"
-          - "eslint-formatter-*"
-          - "eslint-parser-*"
-          - "eslint-plugin-*"
-          - "eslint"
-          - "typescript"
     labels:
       - "Platform/NodeJS"
       - "Status/Pending 🔵"
       - "Type/Dependency 📦"
-    open-pull-requests-limit: 100
+    open-pull-requests-limit: 256
     pull-request-branch-name:
       separator: "/"
-    versioning-strategy: "increase"
+    versioning-strategy: "widen"
