--- a/npm/package.json
+++ b/npm/package.json
@@ -34,6 +34,9 @@
 		"type": "git",
 		"url": "git+https://github.com/hugoalh-studio/setation-es.git"
 	},
+	"scripts": {
+		"build": "tsc"
+	},
 	"devDependencies": {
 		"typescript": "^5.4.5"
 	},
