--- a/npm/package.json
+++ b/npm/package.json
@@ -26,8 +26,18 @@
 	"type": "module",
 	"main": "./dist/mod.js",
 	"exports": {
-		"types": "./dist/mod.d.ts",
-		"import": "./dist/mod.js"
+		"./matrix": {
+			"types": "./dist/matrix.d.ts",
+			"import": "./dist/matrix.js"
+		},
+		"./set": {
+			"types": "./dist/set.d.ts",
+			"import": "./dist/set.js"
+		},
+		".": {
+			"types": "./dist/mod.d.ts",
+			"import": "./dist/mod.js"
+		}
 	},
 	"types": "./dist/mod.d.ts",
 	"repository": {
